# RoughCut

./: .gitignore  AGENTS.md  first-ralph-prompt.md  install-guide.md  install.bat  install.sh  launch_roughcut.bat  launch_roughcut.sh  ralph.ps1  research_fusion_ui_manager.md  story_6_1_diff.txt  test_pause.bat
.ralph/: ralph-history.json  (+1 more)
roughcut/: ELECTRON_APP_STATUS.md  INSTALL.txt  README.md  REVIEW_SUMMARY.md  RoughCut.lua  pyproject.toml
roughcut/electron/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.preload.json  vite.config.ts
roughcut/electron/electron/: appBootstrap.ts  main.ts  preload.ts  pythonBridge.ts  spacetimeCli.ts  spacetimeDependency.ts  spacetimeInstall.ts  spacetimeManager.ts
roughcut/electron/planning_artifacts/: ux-design-specification.md
roughcut/electron/python/: common.py  config.py  indexing.py  query.py  resolve.py
roughcut/electron/src/: App.tsx  index.css
roughcut/lua/: error_recovery.lua  install_orchestrator.lua  media_browser.lua  resolve_api.lua  roughcut.lua  roughcut_main.lua  transcript_viewer.lua
roughcut/lua/roughcut/: progress_dialog.lua
roughcut/lua/ui/: electron_bridge.lua  electron_main_window.lua  format_management.lua  formats_manager.lua  install_dialog.lua  main_window.lua  media_management.lua  navigation.lua  notion_settings.lua  rough_cut_review_window.lua  rough_cut_workflow.lua  runtime.lua
roughcut/scripts/: bootstrap_launch.py  deploy.py  install.py
roughcut/tests/: __init__.py  test_installation.py  test_story_1_2.py  test_story_1_2_ui.lua
(+324 files in other folders)
